Minor comment fixes (labels aligned, 3 different comment examples, glyph icons aligned, labels shorted, responsive-proof, glyph icons links added)
Still to fix: <nowrap> not working.

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6114,7 +6114,7 @@ button.close {
 	height: 30px;
 	padding-top: 4px;
 }
-.comments > li > .content > .title > .fa {
+.comments > li > .content > .title > .glyphicon {
 	margin-top: 4px;
 }
 .comments > li > .content > .text {
@@ -6127,4 +6127,7 @@ button.close {
 }
 .comments > li > .content > .title > .username > small {
 	margin-left: 10px;
+}
+.vertical-middle {
+	vertical-align: 15%;
 }
